--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,385 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+#logo {
+    height: 40px;
+    width: 39px;
+    margin: 0px 645px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#h1 {
+    text-align: center;
+    color: #00b39b;
+    font-family: 'Work Sans',sans-serif;
+}
+
+.paragraphs {
+    display: flex;
+    width: 995px;
+    margin: 50px 180px;
+
+}
+
+.text {
+    height: 150px;
+    width: 480px;
+    padding: 10px;
+    color: #747474;
+    line-height: 27px;
+}
+
+.cards {
+    margin-bottom: 50px;
+    margin-top: 40px;
+    margin-right: 180px;
+    margin-left: 180px;
+    display: flex;
+    width: 995px;
+    gap: 20px;
+}
+
+.card1 {
+    height: 330px;
+    width: 300px;
+    padding: 10px;
+    background-color: #00ccb1;
+    border-radius: 10px;
+}
+
+/* .card1 :hover {
+    background: #66d6c7;
+}  */
+
+.card2 {
+    height: 330px;
+    width: 300px;
+    padding: 10px;
+    background-color: #3d83df;
+    border-radius: 10px;
+}
+.card3 {
+    height: 330px;
+    width: 300px;
+    padding: 10px;
+    background-color: #1b2734;
+    border-radius: 10px;
+}
+
+.card-discription {
+    padding: 20px;
+    margin: 0.3em 0;
+    color: #fff;
+
+}
+
+.card-ttl {
+    font-size: 1.6em;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: 'Work Sans', Arial,sans-serif;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+ .card-p {
+    font-size: 1.5em;
+    letter-spacing: 0.5px;
+    font-family: 'Work Sans', Arial,sans-serif;
+ }
+
+ .card-link {
+    position: relative;
+    top: 80px;
+    color: #eef2f2;
+    font-size: 19.2px;
+ }
+ .card-links {
+    position: relative;
+    top: 30px;
+    color: #eef2f2;
+    font-size: 19.2px;
+    line-height: 40px;
+ } 
+
+ .select1{
+   position: relative;
+   top: 40px;
+ }
+
+ .select2{
+   position: relative;
+   top: 60px;
+ }
+
+ .select {
+   display: block;
+   font-size: 19.2px;
+   cursor: poniter;
+   outline: none;
+   border: none;
+   color: #eef2f2;
+   background-color: #1b2734; 
+ }
+
+ .select::-ms-expand {
+   display: none;
+ }
+ .select::after {
+   position: absolute;
+   pointer-events: none;
+   transition: 0.2s all ease;
+ }
+
+
+ .txt {
+    height: 100px;
+    width: 215px;
+    color: #00b39b;
+    font-size: 1.625em;
+    font-family: 'Work Sans',sans-serif;
+ }
+
+ .logos-list {
+    position: relative;
+    left: 120px;
+    width: 60%;
+    height: 100px;
+     }
+
+ .items1 {
+    list-style: none;
+    display: flex;
+    gap: 50px;
+ }
+
+ .items2 {
+    padding-top: 20px;
+    list-style: none;
+    display: flex;
+    gap: 40px;
+ }
+
+ /* .svg {
+    fill:#C0C0C0;
+    transition: ease-in 0.2s all;
+ } 
+
+ .svg :hover {
+    fill: #00b39b;
+ } */
+
+ .green-bg {
+    height: 89vh;
+    width: auto;
+    background-color: #D9F7F6;
+    position: relative;
+ }
+
+ .green-bg-section {
+    height: 182px;
+    width: 480px;
+    padding: 10px;
+    margin-left: 180px;
+}
+
+.green-section-ttl {
+    height: 89px;
+    width: 440px;
+    color: #00b39b;
+    margin-top: 70px;
+    line-height: 40px;
+    font-size: 2em;
+    font-family: 'Work Sans', Arial,sans-serif;
+}
+
+.green-section-p{
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.875em;
+    line-height: 25px;
+    padding-top: 10px;
+    color: #747474;
+    height: 72px;
+    width: 400px;
+}
+
+ .div-logo {
+    position: relative;
+    top: 83px;
+    margin-left: 50px;
+    max-height: 300px;
+    overflow: hidden;
+ }
+
+ .column-box1 {
+    display: grid;
+    grid-template-rows: 250px, 250px;
+    gap: 20px;
+    width: 228.75px;
+    height: 480px;
+    position: absolute;
+    right: 430px;
+    top: 40px;
+   
+ }
+ .column-box2 {
+    display: grid;
+    grid-template-rows: 250px, 250px;
+    gap: 20px;
+    width: 228.75px;
+    height: 480px;
+    position: absolute;
+    right: 180px;
+    top: 20px;
+    
+ }
+
+.box {
+    width: 210px;
+    height: 230px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+    border: 0;
+    text-align: center;
+}
+
+.box-content {
+    margin: 30px 10px;
+}
+
+.box-ttl {
+    color: #00b39b;
+    font-family: 'Work Sans',sans-serif;
+    font-size: 1.5em;
+    margin: 12px 0;
+}
+
+.box-discription {
+    color: #747474;
+    font-size: 13px;
+    font-family: 'Roboto', sans-serif;
+}
+
+ .paragraph2 {
+    width: 460px;
+    height: 172px;
+    padding-top: 50px;
+    margin: 40px 130px;
+    text-align: center;
+
+ }
+
+ .h2 {
+    margin-left: 300px;
+    color: #00b39b;
+    font-family: 'Work Sans',sans-serif;
+    height: 60px;
+    width: 460px;
+ }
+ .p2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.875em;
+    line-height: 25px;
+    margin-left: 300px;
+    padding-top: 20px;
+    color: #747474;
+    height: 72px;
+    width: 460px;
+ }
+ .cities {
+    /* margin-bottom: 50px;
+    margin-top: 40px;
+    margin-right: 180px;
+    margin-left: 180px;
+    display: flex;
+    flex: wrap;
+    width: 995px;
+    gap: 20px; */
+    display: grid;
+    grid-template-columns: repeat(3 , 280px);
+    justify-content: space-between;
+    gap: 20px;
+    row-gap: 20px;
+    margin-left: 180px;
+    margin-right: 180px;
+ }
+ 
+ .city {
+    height: 309px;
+    width: 280px;
+    padding: 10px;
+    border-radius: 5px;
+    /* border: 1px solid black;  */
+ }
+
+ .content {
+    margin: 15px 0;
+    display: flex;
+    justify-content: space-between;
+    width: 280px;
+ }
+
+ .city-name {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    color: #747474;
+    margin-left: 20px;
+
+ }
+
+ .button{
+    font-size: 0.627em;
+    height: 30px;
+    width: 100px;
+    padding: 1em 1.5em;
+    color: white;
+    background: #3D83DF;
+    border-radius: 5px;
+    border: 0;
+ }
+
+ .btn :hover {
+    background-color: #104a96;
+ }
+
+ .city-link {
+    text-decoration: none;
+ }
+ .city-link :hover {
+    box-shadow: 10px gray;
+ }
+
+
+ .last-section  {
+    height: 101px;
+    width: 520px;
+    margin: 70px 400px;
+    text-align: center;
+    
+ }
+
+ .last-prgph {
+    margin-bottom: 22.5px;
+    color: #333333;
+    font-size: 1.8em;
+    font-family: 'Work Sans',sans-serif;
+    height: 39px;
+    width: 550px;
+ }
+
+ .last-btn {
+    width: 230px;
+    height: 40px;
+    padding: 14px 18px;
+    color: white;
+    background: #3D83DF;
+    border-radius: 5px;
+    border: 0;
+ }
+
